--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </footer>
   </body>
 
+  <script type="text/javascript" src="src/word-api.js"></script>
   <script type="text/javascript" src="src/main.js"></script>
   <script type="text/javascript" src="src/game.js"></script>
 </html>
