show word if user loses

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
               <h3 id="you-win-message">You Win</h3>
               <h3 id="you-lose-message">You Lose</h3>
+              <div id="computer-word-wrapper">The word was <div id="computer-word"></div></div>
             </div>
           </div>
         </div>
