add restart button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
   <body>
     <main>
-      <div class="left">
+      <div class="top">
+        <button id="restart-button">New Game</button>
+
         <div class="hangman-figure">
           <div class='circle'>
             <span id="arcs">
@@ -45,7 +47,7 @@
         </div>
       </div>
 
-      <div class="right">
+      <div class="bottom">
         <div id="type-to-play-notice-wrapper">
           <h1 id="type-to-play-notice">type to play</h1>
         </div>
