add h1 to fade-in

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
       <div class="top">
         <button id="restart-button">New Game</button>
+        <h1 id="welcome-message">Hangman</h1>
 
         <div class="hangman-figure">
           <div class='circle'>
