--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
     <title>Hangman</title>
   </head>
 
@@ -51,7 +53,7 @@
 
       <div class="bottom">
         <div id="type-to-play-notice-wrapper">
-          <h1 id="type-to-play-notice">type to play</h1>
+          <h1 id="type-to-play-notice">start typing...</h1>
         </div>
 
         <div class="show-guess-result-section"></div>
