--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
           <h4>guessed letters</h4>
           <div id="guessed-letters-array"></div>
         </div>
+
+        <div id="mobile-input">
+          <input type="text" name="mobile-input" placeholder="a...">
+        </div>
       </div>
     </main>
 
