--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <main>
+    <main id="hangman-game">
       <div class="top">
         <button id="restart-button">New Game</button>
         <h1 id="welcome-message">Hangman</h1>
