--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -11,18 +11,70 @@
     <script src="dependencies/jasmine-2.8.0/jasmine-html.js"></script>
     <script src="dependencies/jasmine-2.8.0/boot.js"></script>
 
+  </head>
+
+  <body id="spec-page">
+    <main id="hangman-game" style="display:none;">
+      <div class="top">
+        <button id="restart-button">New Game</button>
+        <h1 id="welcome-message">Hangman</h1>
+
+        <div class="hangman-figure">
+          <div class='circle'>
+            <span id="arcs">
+              <div class='arc red-10'></div>
+              <div class='arc red-9'></div>
+              <div class='arc red-8'></div>
+              <div class='arc red-7'></div>
+              <div class='arc red-6'></div>
+              <div class='arc red-5'></div>
+              <div class='arc red-4'></div>
+              <div class='arc red-3'></div>
+              <div class='arc red-2'></div>
+              <div class='arc red-1'></div>
+              <div class='arc red-0'></div>
+            </span>
+
+            <div class="end-game-messages">
+              <h3 id="you-win-message">You Win</h3>
+              <h3 id="you-lose-message">You Lose</h3>
+
+              <div class="guesses-left">
+                <span id="guesses-left-notice">Guesses left: </span>
+                <span id="guesses-left">10</span>
+              </div>
+
+              <div id="computer-word-wrapper">The word was <div id="computer-word"></div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bottom">
+        <div id="type-to-play-notice-wrapper">
+          <h1 id="type-to-play-notice">start typing...</h1>
+        </div>
+
+        <div class="show-guess-result-section"></div>
+
+        <div class="guessed-letters">
+          <div id="guessed-letters-array"></div>
+        </div>
+
+        <div id="mobile-input">
+          <input type="text" name="mobile-input" placeholder="a...">
+        </div>
+      </div>
+    </main>
+
     <!-- include source files here... -->
     <script src="../src/word-api.js"></script>
-    <script src="../src/main.js"></script>
     <script src="../src/game.js"></script>
+    <script src="../src/main.js"></script>
 
     <!-- include spec files here... -->
     <script src="examples/word-api-spec.js"></script>
-    <script src="examples/main-spec.js"></script>
     <script src="examples/game-spec.js"></script>
-
-  </head>
-
-  <body>
+    <script src="examples/main-spec.js"></script>
   </body>
 </html>
